<?xml version="1.0"?>
<package format="3">
  <name>behavior_tree</name>
  <version>0.0.1</version>
  <description>The behavior_tree package</description>

  <maintainer email="daehyung@kaist.ac.kr">Daehyung Park</maintainer>
  <license>BSD</license>
  <author email="daehyung@kaist.ac.kr">Daehyung Park</author>

  <!-- Dependencies needed to compile this package. -->
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclpy</depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>riro_msgs</exec_depend>
  <exec_depend>riro_srvs</exec_depend>
  <!-- <exec_depend>py_trees</exec_depend> -->
  <exec_depend>py_trees_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <!-- <exec_depend>rqt_py_trees</exec_depend> -->
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
